2011-11-16  Chris Fleizach  <cfleizach@apple.com>

        WebKitTestRunner needs to support accessibility-related DRT APIs
        https://bugs.webkit.org/show_bug.cgi?id=42131

        Reviewed by Beth Dakin.

        Port the AX code in DRT to WKTestRunner by using IDL.

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (horizontalScrollbarCallback):
        (verticalScrollbarCallback):
        (AccessibilityUIElement::horizontalScrollbar):
        (AccessibilityUIElement::verticalScrollbar):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::horizontalScrollbar):
        (AccessibilityUIElement::verticalScrollbar):
        * WebKitTestRunner/DerivedSources.make:
        * WebKitTestRunner/GNUmakefile.am:
        * WebKitTestRunner/InjectedBundle/AccessibilityController.cpp: Added.
        (WTR::AccessibilityController::create):
        (WTR::AccessibilityController::AccessibilityController):
        (WTR::AccessibilityController::~AccessibilityController):
        (WTR::AccessibilityController::makeWindowObject):
        (WTR::AccessibilityController::wrapperClass):
        (WTR::AccessibilityController::rootElement):
        (WTR::AccessibilityController::focusedElement):
        (WTR::AccessibilityController::elementAtPoint):
        * WebKitTestRunner/InjectedBundle/AccessibilityController.h: Added.
        (WTR::AccessibilityController::logFocusEvents):
        (WTR::AccessibilityController::logValueChangeEvents):
        (WTR::AccessibilityController::logScrollingStartEvents):
        (WTR::AccessibilityController::logAccessibilityEvents):
        (WTR::AccessibilityController::addNotificationListener):
        (WTR::AccessibilityController::notificationReceived):
        (WTR::AccessibilityController::resetToConsistentState):
        * WebKitTestRunner/InjectedBundle/AccessibilityTextMarker.cpp: Added.