@@ -1,3 +1,12 @@
+2011-11-16  Dirk Pranke  <dpranke@chromium.org>
+
+        Run a dummy test in the gpu configurations if there's nothing to do.
+        https://bugs.webkit.org/show_bug.cgi?id=72498
+
+        Reviewed by James Robinson.
+
+        * Scripts/webkitpy/layout_tests/port/chromium_gpu.py:
+
 2011-11-16  Chris Fleizach  <cfleizach@apple.com>
 
         WebKitTestRunner needs to support accessibility-related DRT APIs
